mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_const_field.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_const_field.mux`
error: 2 errors found

error: Const fields must have a default value
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_const_field.mux:3:13
   |
 3 |   const int f
   |             ^

error: Expected expression, found '}'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_const_field.mux:4:1
   |
 4 | }
   | ^
